# mayastor-extensions

./: Cargo.toml  README.md  shell.nix
aggregater/: Cargo.toml
aggregater/src/: events_cache.rs  events_collector.rs  events_store.rs  events_store_cm.rs  events_store_cr.rs  main.rs  mbus_nats_d.rs  message.rs  nats.rs
aggregator/: Cargo.toml
aggregator/src/: events.rs  events_cache.rs  events_collector.rs  events_store.rs  events_store_cm.rs  events_store_cr.rs  exporter.rs  exporter_config.rs  main.rs  nats.rs  retry.rs
aggregator/src/common/: constants.rs  error.rs
aggregator/src/events/: events_cache.rs  events_collector.rs
aggregator/src/exporter/: exporter_config.rs
call-home/: Cargo.toml
call-home/src/: stats.rs
call-home/src/common/: constants.rs  errors.rs  utils.rs
call-home/src/events/cache/: events_cache.rs
call-home/src/events/store/: events_store.rs
chart/: Chart.yaml  values.yaml
chart/templates/mayastor/agents/core/: agent-core-deployment.yaml
chart/templates/mayastor/obs/: obs-callhome-deployment.yaml  stats-aggregater-service.yaml  stats-deployment.yaml  stats-service.yaml
chart/templates/mayastor/rbac/: rbac.yaml
console-logger/: Cargo.toml
constants/: Cargo.toml
k8s/plugin/: Cargo.toml
k8s/plugin/src/: main.rs
k8s/plugin/src/resources/: mod.rs
k8s/supportability/: Cargo.toml
k8s/supportability/src/: lib.rs  operations.rs
k8s/supportability/src/collect/: common.rs  error.rs  resource_dump.rs  system_dump.rs
k8s/supportability/src/collect/k8s_resources/: client.rs  k8s_resource_dump.rs
k8s/supportability/src/collect/logs/: k8s_log.rs  loki.rs  mod.rs
k8s/supportability/src/collect/persistent_store/: etcd.rs  mod.rs
k8s/supportability/src/collect/resources/: traits.rs
k8s/upgrade/: Cargo.toml
k8s/upgrade/src/: lib.rs  main.rs  upgrade_job.rs
k8s/upgrade/src/common/: constants.rs  error.rs  mod.rs  utils.rs
k8s/upgrade/src/plugin/: error.rs  preflight_validations.rs  upgrade.rs  user_prompt.rs
k8s/upgrade/src/upgrade_job/: mod.rs  upgrade_components.rs
k8s/upgrade/src/upgrade_job/events/: event_recorder.rs
k8s/upgrade/src/upgrade_job/helm/: upgrade.rs  values.rs
k8s/upgrade/src/upgrade_job/opts/: validators.rs
k8s/upgrade/src/upgrade_job/upgrade/: data_plane.rs
k8s/upgrade/src/upgrade_job/upgrade_components/: data_plane.rs  path.rs
k8s/upgrade/src/upgrade_plugin/: common.rs  objects.rs  preflight_validations.rs  upgrade.rs
metrics-exporter/: Cargo.toml
nix/: overlay.nix
nix/lib/: rust.nix
nix/pkgs/extensions/: cargo-project.nix  efault.nix
nix/pkgs/images/: default.nix
nix/pkgs/utils/: default.nix
operators/src/upgrade/helm/: client.rs
scripts/: release.sh  release.sh_b
scripts/python/: generate-test-tag.sh  tag-chart.sh
scripts/utils/: repo.sh
tests/bdd/: requirements.txt  setup.sh
