[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stats-aggregator"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nats = "*"
async-nats = "*"
#nats-server-js = "*"
futures = "*"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
#strum_macros = "0.24.3"
serde_json = "1.0"
serde = "1.0.150"
strum = "0.24"
strum_macros = "0.24"
#strum = { version = "0.24", features = ["derive"] }
once_cell = "1.16.0"
snafu = "0.7.4"

anyhow = "1.0.61"
#bollard = {version = "0.13.0", optional=true, git="https://github.com/drifting-in-space/bollard.git", branch = "paulgb/update-serde-with-version"}
bytes = "1.2.1"
chrono = { version = "0.4.22", features = ["serde", "clock"], default_features=false }
clap = { version = "4.0.15", features = ["derive"] }
config = { version = "0.13.2", default_features = false, features = ["toml"] }
dashmap = "5.4.0"
rand = "0.8.5"
serde_with = "2.0.0"
time = "0.3.17"
tokio-stream = "0.1.9"
tracing = "0.1.36"
tracing-stackdriver = "0.6.1"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
url = "2.2.2"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
hyper = { version = "0.14", features = ["client", "tcp", "http1", "http2", "stream"] }

#exporter
actix-web = { version = "4.3.0", features = ["rustls"] }
prometheus = "0.13.3"
mime = "0.3.16"


kube = { version = "0.78.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_20"] }
schemars = "0.8.11"

mbus-api = { path = "../dependencies/control-plane/utils/dependencies/mbus-api" }

rpc = { path = "../dependencies/control-plane/rpc" }
utils = { path = "../dependencies/control-plane/utils/utils-lib" }
