[package]
name = "call-home"
version = "0.1.0"
edition = "2021"
description = "Call-home for observability"


[lib]
name = "obs"
path = "src/lib.rs"

[[bin]]
name = "obs-callhome"
path = "src/bin/callhome/main.rs"

[[bin]]
name = "obs-callhome-stats"
path = "src/bin/stats/main.rs"

[dependencies]
constants = { path = "../constants" }
openapi = { path = "../dependencies/control-plane/openapi" }
kube = { version = "0.87.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["v1_22"] }
futures = "0.3.31"
tokio = { version = "1.41.0", features = ["full"] }
clap = { version = "4.5.20", features = ["cargo", "derive", "string"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
serde = { version = "1.0.214", features = ["derive"] }
sha256 = "1.5.0"
jsonpath_lib = "0.3.0"
url = "2.5.2"
snafu = "0.8.5"
anyhow = "1.0.92"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
reqwest = "0.12.9"
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"
chrono = "0.4.38"
rand = "0.8.5"
tempfile = "3.13.0"
humantime = "2.1.0"
once_cell = "1.20.2"
bytes = "1.8.0"
utils = { path = "../dependencies/control-plane/utils/utils-lib" }
events-api = { path = "../dependencies/control-plane/utils/dependencies/apis/events" }
tokio-retry = "0.3"

# exporter
actix-web = { version = "4.9.0", features = ["rustls-0_21"] }
prometheus = "0.13.4"
mime = "0.3.17"

# parse prometheus output
prometheus-parse = "0.2.5"
heck = "0.5.0"
