[package]
name = "metrics-exporter"
description = "Metrics Exporters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "metrics-exporter-io-engine"
path = "src/bin/io_engine/main.rs"


[dependencies]
actix-web = { version = "4.9.0", features = ["rustls-0_21"] }
actix-service = "2.0.2"
tokio = { version = "1.41.0", features = ["full"] }
once_cell = "1.20.2"
clap = { version = "4.5.20", features = ["color", "derive", "string"] }
prometheus = "0.13.4"
tonic = "0.12.3"
humantime = "2.1.0"
serde_json = "1.0.132"
serde = "1.0.214"
mime = "0.3.17"
rpc = { path = "../dependencies/control-plane/rpc" }
utils = { path = "../dependencies/control-plane/utils/utils-lib" }
strum = "0.26.3"
strum_macros = "0.26.4"
tracing = "0.1.40"
