[package]
name = "supportability"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "supportability"
path = "src/lib.rs"

[features]
default = ["rls"]
rls = ["openapi/tower-client-rls"]
tls = ["openapi/tower-client-tls"]

[dependencies]
futures = "0.3"
tokio = { version = "1.41.0", features = ["full"] }
k8s-openapi = { version = "0.22.0", features = ["v1_24"] }
kube = { version = "0.94.2", features = ["derive"] }
yaml-rust = { version = "0.4" }
clap = { version = "4.5.20", features = ["color", "derive"] }
anyhow = "1.0.92"
humantime = "2.1.0"
async-trait = "0.1.83"
serde = "1.0.214"
serde_json = "1.0.132"
serde_yaml = "0.9.34"
lazy_static = "1.5.0"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
once_cell = "1.20.2"
tar = "0.4"
flate2 = { version = "1.0.34" }
chrono = "0.4.38"
urlencoding = "2.1.3"
downcast-rs = "1.2.1"
schemars = "0.8.21"
http = "1.1.0"
hyper = { version = "1.5.0", features = ["client", "http1", "http2"] }
hyper-util = "0.1.10"
tower = { version = "0.5.1", features = ["timeout", "util"] }

k8s-operators = { path = "../../dependencies/control-plane/k8s/operators", default-features = false }
pstor = { path = "../../dependencies/control-plane/utils/pstor" }
platform = { path = "../../dependencies/control-plane/utils/platform" }
openapi = { path = "../../dependencies/control-plane/openapi", default-features = false, features = ["tower-client", "tower-trace"] }
kube-proxy = { path = "../../dependencies/control-plane/k8s/proxy" }
rest-plugin = { path = "../../dependencies/control-plane/control-plane/plugin", default-features = false }
utils = { path = "../../dependencies/control-plane/utils/utils-lib" }
hyper-body = { path = "../../dependencies/control-plane/utils/hyper-body" }
constants = { path = "../../constants" }
http-body-util = "0.1.2"
