[package]
name = "upgrade"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "upgrade-job"
path = "src/bin/upgrade-job/main.rs"

[lib]
name = "upgrade"
path = "src/lib.rs"

[dependencies]
openapi = { path = "../../dependencies/control-plane/openapi", default-features = false, features = ["tower-trace"] }
utils = { path = "../../dependencies/control-plane/utils/utils-lib" }
constants = { path = "../../constants" }
kube-proxy = { path = "../../dependencies/control-plane/k8s/proxy" }
console-logger = { path = "../../console-logger" }
convert_case = "0.6.0"
kube = { version = "0.87.0", default-features = true, features = ["derive", "runtime"] }
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive", "env", "string", "color"] }
humantime = "2.1.0"
maplit = "1.0.2"
k8s-openapi = { version = "0.20.0", features = ["v1_22"] }
tower = { version = "0.5.1", features = ["timeout", "util"] }
hyper = { version = "1.5.0", features = ["client", "http1", "http2"] }
http = "1.1.0"
async-trait = "0.1.83"
serde = "1.0.214"
serde_json = "1.0.132"
snafu = "0.8.5"
serde_yaml = "0.9.34"
semver = { version = "1.0.23", features = ["serde"] }
url = "2.5.2"
regex = "1.11.1"
tokio = { version = "1.41.0", features = ["full"] }
tempfile = "3.13.0"
# Tracing
tracing = "0.1.40"
base64 = "0.22.1"
flate2 = "1.0.34"
